--- a/de.htwg.menschaergerdichnicht/build.gradle
+++ b/de.htwg.menschaergerdichnicht/build.gradle
@@ -54,7 +54,7 @@ task pom << {
     
 sonarqube {
     properties {
-    property "sonar.projectName", "de.htwg.menschaergerdichnicht"
+    property "sonar.projectName", "SE2015WS-11-MÄDN"
     property "sonar.projectKey", "de.htwg.menschaergerdichnicht"
     property "sonar.projectVersion", "2.0"
     property "sonar.binaries", "build/classes"
