--- a/de.htwg.menschaergerdichnicht/pom.xml
+++ b/de.htwg.menschaergerdichnicht/pom.xml
@@ -8,7 +8,6 @@
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-core</artifactId>
-      <version>2.5</version>
       <scope>compile</scope>
     </dependency>
     <dependency>
@@ -26,7 +25,6 @@
     <dependency>
       <groupId>org.apache.logging.log4j</groupId>
       <artifactId>log4j-api</artifactId>
-      <version>2.5</version>
       <scope>compile</scope>
     </dependency>
   </dependencies>
@@ -34,4 +32,18 @@
     <sourceDirectory>src</sourceDirectory>
     <testSourceDirectory>test</testSourceDirectory>
   </build>
+  <dependencyManagement>
+  	<dependencies>
+  		<dependency>
+  			<groupId>org.apache.logging.log4j</groupId>
+  			<artifactId>log4j-core</artifactId>
+  			<version>2.0</version>
+  		</dependency>
+  		<dependency>
+  			<groupId>org.apache.logging.log4j</groupId>
+  			<artifactId>log4j-api</artifactId>
+  			<version>2.0</version>
+  		</dependency>
+  	</dependencies>
+  </dependencyManagement>
 </project>
